--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -2,9 +2,9 @@
   padding: 9px 20px;
   border: none;
   border-radius: 5px;
-  box-shadow: 0 0 1px 1px #c4c4c4;
+  /* box-shadow: 0 0 1px 1px #c4c4c4; */
   font-size: 1rem;
-  color: #4d4d4d;
+  /* color: #4d4d4d; */
   background-color: transparent;
   cursor: pointer;
 }
